frontend/src/pages/HomePage.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');

.homepage {
  font-family: Poppins, sans-serif;
  height: 100vh;
  display: flex;
  flex-direction: column;
}

.homepage-header {
  display: flex;
  flex-direction: row;
  align-items: center;
  text-align: center;
  padding: 20px 30px;
}

.homepage-header a, .homepage-header button {
  color: #000000CC;
}

.logo-section{
  display: flex;
  flex-direction: row;
  flex: 1;
  justify-content: start;
  font-size: 0;
}

#homepage-logo {
  min-height: 40px;
  height: 2.5vw;
  width: auto;
}

.links-section{
  display: flex;
  flex-direction: row;
  flex: 1;
  justify-content: center;
  font-size: 1.2rem;
}

.user-section{
  display: flex;
  flex-direction: row;
  flex: 1;
  justify-content: end;
  gap: 5px;
}

.user-section button{
  flex-grow: 1;
  max-width: 100px;
  height: 100%;
  border-radius: 30px;
  text-align: center;
  text-wrap: nowrap;
}

#login-btn{
  border: 1px solid #6A0DAD55;
  background-color: white;
}

#register-btn{
  background-color: #6A0DAD;
}

#register-btn a{
 color: white;
}

.homepage-main{
  display: flex;
  flex-direction: row;
  align-items: center;
  flex-grow: 1;
  width: 100%;
  overflow-y: auto;
  padding: 0 30px 40px 20px;
  box-sizing: border-box;
  overflow-y: auto;
}

.homepage-intro{
  display: flex;
  flex-direction: column;
  gap: 100px;
  width: 50%;
  white-space: normal; 
  flex-grow: 1; 
  word-wrap: break-word;
  overflow-wrap: break-word;
}

.homepage-intro h1{
  font-size: 400%;
  margin: 0 5%;
}

.homepage-intro h1 span{
  color: #d59108;
}

.homepage-intro button{
  background-color: #6A0DAD;
  color: white;
  max-width: 35%;
  font-size: 1.2rem;
  border-radius: 30px;
  margin-inline: 5%;
}

.homepage-intro button a{
  display: block;
}

.map-section{
  display: flex;
  flex-direction: column;
  width: 50%;
  flex-grow: 1;
  position: relative;
}

.map-section #map{
  max-width: 100%;
}

.map-section .map-pins{
  position: absolute; 
  width: 10%;
  animation: drop-pin 1s ease-in-out forwards;
  z-index: 10;
  opacity: 0; 
}

.map-section #purple-pin{
  position: absolute; 
  width: 11.5%;
  top: 25%;
  left: 15%;
  animation-delay: 0s; 
  animation-name: drop-pin-purple;
}

.map-section #blue-pin{
  position: absolute; 
  top: 40%;
  left: 40%;
  animation-delay: 0.5s;
  animation-name: drop-pin-blue;
}

.map-section #yellow-pin{
  position: absolute; 
  top: 33%;
  left: 64%;
  animation-delay: 1s;
  animation-name: drop-pin-yellow;
}

@keyframes drop-pin-purple {
  0% {
    top: -20%;
    opacity: 0;
  }
  100% {
    top: 25%;
    opacity: 1;
  }
}

@keyframes drop-pin-blue {
  0% {
    top: -20%;
    opacity: 0;
  }
  100% {
    top: 40%;
    opacity: 1;
  }
}

@keyframes drop-pin-yellow {
  0% {
    top: -20%;
    opacity: 0;
  }
  100% {
    top: 33%; 
    opacity: 1;
  }
}

